[gd_scene load_steps=6 format=3 uid="uid://rcr7gtbh76n"]

[ext_resource type="Theme" uid="uid://c4jbmdgdjflr4" path="res://UI/global.tres" id="1_nld2j"]
[ext_resource type="Script" uid="uid://derdsqcmymd5x" path="res://scenes/States/end_scene.gd" id="1_s7dif"]
[ext_resource type="Texture2D" uid="uid://dr8qcmehbc7cc" path="res://assets/Background/sky.png" id="2_b5b61"]
[ext_resource type="Texture2D" uid="uid://ba7k1i630p52s" path="res://assets/Background/cloud.png" id="3_2wfne"]
[ext_resource type="Texture2D" uid="uid://bj22qcwtqh0cs" path="res://assets/end_rev.png" id="4_r6gaf"]

[node name="EndScene" type="Node2D"]
script = ExtResource("1_s7dif")

[node name="Sky" type="Sprite2D" parent="."]
position = Vector2(955, 541.5)
scale = Vector2(1.98542, 3.9963)
texture = ExtResource("2_b5b61")

[node name="Cloud" type="Sprite2D" parent="."]
position = Vector2(972, 300)
scale = Vector2(2.1958334, 1.937037)
texture = ExtResource("3_2wfne")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_nld2j")

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 472.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="ScoreText" type="Label" parent="Control/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Score:"

[node name="ScoreLabel" type="Label" parent="Control/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "000000000"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="HighScoreText" type="Label" parent="Control/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "High Score:"

[node name="HighScoreLabel" type="Label" parent="Control/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "999999999"

[node name="ReplayButton" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Restart"

[node name="EndRev" type="Sprite2D" parent="."]
position = Vector2(944, 441.99997)
scale = Vector2(1.7, 1.7)
texture = ExtResource("4_r6gaf")

[connection signal="mouse_entered" from="Control/VBoxContainer2/ReplayButton" to="." method="_on_replay_button_mouse_entered"]
[connection signal="pressed" from="Control/VBoxContainer2/ReplayButton" to="." method="_on_replay_button_pressed"]
